# Solarius

./: .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: run.py  settings.py
api/app/routers/: __init__.py  application.py
api/app/routers/search/: router.py  schemas.py  utils.py
api/app/tests/: conftest.py
api/app/tests/routers/: test_healthcheck.py
site/: README.md  biome.json  bun.lockb  package.json
site/app/: layout.tsx  page.tsx  providers.tsx
site/app/api/search/: route.ts
site/components/: navbar.tsx
site/config/: api.ts  site.ts
